syntax = "proto3";
package com.zaiika.token;

message TokenRequest {
  string token = 1;
}

message IsTokenValidResponse {
  bool isValid = 1;
}

service TokenService{
  rpc isValid(TokenRequest) returns (IsTokenValidResponse);
}